--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.5",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-
-    "guid-typescript": "^1.0.9",
-
     "@dynamic-mapper/angular": "^1.0.2",
     "@dynamic-mapper/mapper": "^1.9.1",
+    "guid-typescript": "^1.0.9",
     "ngx-webcam": "^0.4.1",
-
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
