--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-
-    "guid-typescript": "^1.0.9",
-
     "@dynamic-mapper/angular": "^1.0.2",
     "@dynamic-mapper/mapper": "^1.9.1",
+    "file-saver": "^2.0.5",
+    "guid-typescript": "^1.0.9",
     "ngx-webcam": "^0.4.1",
-
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -33,6 +31,7 @@
     "@angular-devkit/build-angular": "~13.3.3",
     "@angular/cli": "~13.3.3",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
