--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@dynamic-mapper/angular": "^1.0.2",
     "@dynamic-mapper/mapper": "^1.9.1",
     "@material/dialog": "^14.0.0",
+    "@swimlane/ngx-charts": "^20.1.0",
     "exif-parser": "^0.1.12",
     "exifr": "^7.1.3",
     "exift": "^0.0.2",
