--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@dynamic-mapper/mapper": "^1.9.1",
     "@material/dialog": "^14.0.0",
     "@swimlane/ngx-charts": "^20.1.0",
+    "exif-js": "^2.3.0",
     "exif-parser": "^0.1.12",
     "exifr": "^7.1.3",
     "exift": "^0.0.2",
